# NMSTPP

./: .gitignore  pyproject.toml
src/nmstpp/: train.py
src/nmstpp/model/: base.py  kernel.py  stpp.py
