[build-system]
requires = ["setuptools>=68,<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmstpp"
version = "0.1.0"
dependencies = [
  "plotly>=4.12.0,<5.0.0",
  "torch>=2.6.0,<2.7.0",          # now matches BenchSTPP
  "pandas>=1.2.4,<3.0.0",         # lets you use 2.2.x
  "pytz>=2021.1,<2022.0",
  "matplotlib>=3.3.4,<4.0.0",
  "scipy>=1.6.2,<2.0.0",
  "tqdm>=4.47.0,<5.0.0",
  "numpy>=1.19.5,<3.0.0",         # lets you use 2.3.x
  "ctrnn>=2.0,<3.0",
  "scikit-learn>=1.0.2,<2.0.0",
]
[tool.setuptools.packages.find]
where = ["src"]